--- a/Dicee+Challenge+-+Starting+Files/styles.css
+++ b/Dicee+Challenge+-+Starting+Files/styles.css
@@ -7,7 +7,6 @@
 .dice {
   text-align: center;
   display: inline-block;
-
 }
 
 body {
@@ -20,6 +19,18 @@ h1 {
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
   color: #4ECCA3;
+  cursor : pointer;
+}
+
+.play-btn{
+  text-align: center;
+}
+
+.play-btn button{
+  padding: 5px 20px;
+  background-color: #4ecca3;
+  border: 0;
+  border-radius: 9px;
 }
 
 p {
